Fixed overflow problems

--- a/app/components/GlitchyText.module.css
+++ b/app/components/GlitchyText.module.css
@@ -1,6 +1,9 @@
 .glitchyText{
   margin: 3vh auto;
   text-align: center;
-  font-size: 3em;
+  font-size: 2.5em;
+  width: 100%;
+  overflow-wrap: anywhere;
+  text-wrap: wrap;
   color: #00FF41;
 }
